--- a/main/MainPage.html
+++ b/main/MainPage.html
@@ -1,3 +1,13 @@
-<!DOCTYPE qweqwe>
 <html>
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+	<link href = "style.css">
+</head>
+<body>
+	<div>
+		
+	</div>
+	
+</body>
 </html>
